responsive design correction device-width

--- a/src/main.scss
+++ b/src/main.scss
@@ -51,7 +51,7 @@ body {
         display: flex;
         justify-content: center;        
 
-        @media screen and (max-width: 800px) {
+        @media screen and (max-device-width: 800px) {
             flex-direction: column;
             align-items: center;
         }
@@ -114,7 +114,7 @@ body {
             justify-content: center;
             align-items: center;
 
-            @media screen and (max-width: 800px) {
+            @media screen and (max-device-width: 800px) {
                 width: 50%;
             }
 
