--- a/src/main.scss
+++ b/src/main.scss
@@ -170,4 +170,41 @@ body {
             font-size: 2rem;
         }        
     }
+
+    #sendEmail {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 5rem;
+        border: 1px solid #888;
+        width: 50%;
+        font-size: 3rem;
+    }
+    
+    /* The Close Button */
+    #closeModalSendEmail {
+        color: #aaaaaa;
+        float: right;
+        font-weight: bold;
+    }
+    
+    #closeModalSendEmail:hover,
+    #closeModalSendEmail:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
 }
